Added contact and projects pages

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,12 @@ navigation:
 - text: Home
   url: /
   name: home
+- text: Projects
+  url: /projects/
+  name: projects
 - text: Résumé
   url: /resume/
   name: resume
+- text: Contact
+  url: /contact/
+  name: contact
