Added my name as post author

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ name: Adam Pritchard
 description: coder, etc.
 url: http://www.crypti.cc
 
+myfullname: Adam Pritchard
+
 exclude:
 - README.md
 - node_modules
